--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,8 @@
 <h1>
   {{title}}
 </h1>
+<div class="main">
+    <div class="container">
+      <router-outlet></router-outlet> 
+    </div>
+  </div>
